Update the bblayers.conf and template.conf .

--- a/README
+++ b/README
@@ -46,14 +46,19 @@ git clone https://github.com/mohseen-ahamad/meta-rba5d2x.git -b main
 cd ../
 
 6/ Initialize build directory
-source oe-init-build-env build-microchip
+source oe-init-build-env build
 
-7/ Edit local.conf to specify the target machine and build the image
+7/ export the meta-rba5d2x/conf in poky by using vi.templateconf.
+
+8/ add the meta-rba5d2x layer in build/conf/bblayer.conf
+
+9/ Edit local.conf to specify the target machine and build the image
 	i) For rugged board a5d2x(SDCARD)
     		-> Change machine name to "rugged-board-a5d2x-sd1" in conf/local.conf as below 
 			MACHINE ?= "rugged-board-a5d2x-sd1"
 
     			$ bitbake rb-sd-core-image-minimal
+
 
 Typical bitbake output
 ======================
